[metadata]
name = cm_metric
version = 5.0
summary = A tool to simplify managing multiple clouds including bare metal provisioning
description-file =
    README.rst
author = Cloudmesh Team, Gregor von Laszewski, Hyungro Lee, Fugang Wang
author-email = laszewski@gmail.com
maintainer_email= lee212@indiana.edu
home-page = http://github.org/cloudmesh/cloudmesh
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux :: MacOS :: MacOS X
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Boot
    Topic :: System :: Systems Administration
    Framework :: Flask
    Environment :: OpenStack


[global]
setup-hooks =
    pbr.hooks.setup_hook

[install]
install-data=$HOME

[files]
packages =
    cloudmesh

data_files =
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_inventory.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_rain.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_project.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_vm.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_init.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_cloud.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_keys.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_user.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_list.py
	.cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_exp.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_defaults.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/cm_shell_register.py
    .cloudmesh/cmd3local/plugins = cmd3local/plugins/__init__.py
    .cloudmesh/cmd3local/plugins/Interface = cmd3local/plugins/Interface/__init__.py
    .cloudmesh/cmd3local/plugins/Interface = cmd3local/plugins/Interface/vm_interface.py

[entry_points]
console_scripts =
    cm-metric = cloudmesh.config.cm_manage:main
    cm-euca-gather-log-files = cm_metric.shell.CollectFiles:main
    cm-parser = cm_metric.shell.Parser:main
    cm-logparser = cm_metric.shell.LogParser:main
    cm-metric-converter = cm_metric.shell.Converter:main
    cm-metric = cm_metric.shell.CMMetricShell:main
    cm-metric-install = cm_metric.setup.Install:main


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

#data_files=[('cloudmesh', ['cloudmesh/cloudmesh_template.yaml', 'cloudmesh/cloudmesh_clouds.yaml'])],
